--- a/src/components/card-list/card-list.styles.css
+++ b/src/components/card-list/card-list.styles.css
@@ -1,7 +1,10 @@
 .card-list {
-    width: 95vw;
-    margin: 5px 5px;
+    width: 90vw;
+    margin: auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
+}
+.card-list-container {
+    width: 99vw;
 }
